--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -14,7 +14,11 @@
                 <h6 class="card-subtitle mb-2 text-body-secondary"><%= contact.noHP %></h6>
                 <p class="card-text"><%= contact.email %></p>
                 <a href="/contact/edit/<%= contact.nama %>" class="btn btn-info badge">Edit</a>
-                <a href="/contact/delete/<%= contact.nama %>" class="btn btn-danger badge" onclick="return confirm ('yakin?')">Hapus</a>
+                <!-- <a href="/contact/delete/<%= contact.nama %>" class="btn btn-danger badge" onclick="return confirm ('yakin?')">Hapus</a> -->
+                 <form action="/contact?_method=DELETE" method="POST" class="d-inline">
+                  <input type="hidden" name="nama" value="<%= contact.nama %>" />
+                  <button type="submit" class="btn btn-danger badge" onclick="return confirm('yakin?')">Hapus</button>
+                 </form>
                 <a href="/contact" class="card-link d-block mt-3">&laquo; kembali</a>
               </div>
             </div>
